--- a/style.css
+++ b/style.css
@@ -499,3 +499,12 @@ navbar-links
         margin:0 0;
     }
 }
+@media (max-width:650px) {
+    .navBarActivate .logoLink{
+        margin:0 1rem;
+    }
+    .toggle-button{
+        margin: 0 1rem;
+    }
+  
+}
