--- a/style.css
+++ b/style.css
@@ -500,8 +500,9 @@ navbar-links
     }
 }
 @media (max-width:650px) {
-    .navBarActivate .logoLink{
+    .logoLink{
         margin:0 1rem;
+        color: rgb(255, 0, 0);
     }
     .toggle-button{
         margin: 0 1rem;
