--- a/style.css
+++ b/style.css
@@ -522,8 +522,7 @@ navbar-links
 
 @keyframes moveUp {
     0%{
-        
-        transform: translateY(200px);
+
         opacity: 0;
     }
     50%{
@@ -531,4 +530,7 @@ navbar-links
         opacity: 1;
     }
     
+}
+.observe{
+    margin: 200px;
 }
