--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ main{
     transform: scale(1);
     transition: 1s;
 }
+
   .navbar-links li{
     list-style: none;
     display: inline;
@@ -457,6 +458,7 @@ navbar-links
     background: rgba(65, 65, 65, 0.8);
     transition: all 0.5s;
     color: white;
+    z-index: 2;
 }
 
 .navBarActivate a{
@@ -587,4 +589,137 @@ navbar-links
 }
 
 
+}
+.slide{
+   margin: 5rem 1rem;
+   padding:1rem;
+   max-height: 1000px;
+   /* background-color: aqua; */
+}
+@media screen and (max-width:500px) {
+    .slide{
+        margin: 5rem 0rem;
+        max-height: 1000px;
+        padding: 0;
+        /* background-color: aqua; */
+     }
+}
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  /* background-color: rgb(255, 0, 0);  */
+
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+
+}
+
+.slide-img{
+    display: block;
+    margin: auto;
+    width: 300px;
+    height: 400px;
+    max-width: 300px;
+    max-height: 400px;
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(0,0,0,0.8);
+}
+
+@media screen and (max-width:500px) {
+    .prev, .next{
+        padding: 12px;
+        top: 100%;
+        margin-top: 0px;
+    }
+}
+
+@media screen and (max-width:300px) {
+  .slide{
+      display: none;
+  }
+}
+
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
