--- a/style.css
+++ b/style.css
@@ -653,13 +653,13 @@ navbar-links
   background-color: rgba(0,0,0,0.8);
 }
 
-@media screen and (max-width:500px) {
+/* @media screen and (max-width:500px) {
     .prev, .next{
         padding: 12px;
         top: 100%;
         margin-top: 0px;
     }
-}
+} */
 
 @media screen and (max-width:300px) {
   .slide{
