--- a/style.css
+++ b/style.css
@@ -66,11 +66,12 @@ main{
   .logo{
     font-size:2rem;
     color: black;
+    cursor: pointer;
  }
- .mouseHoverInLogo{
+ /* .mouseHoverInLogo{
      transform: scale(1.5);
      transition: 1s;
- }
+ } */
 
  .mouseHoverOutLogo{
     color: rgb(0, 0, 0);
@@ -87,11 +88,11 @@ main{
     cursor: pointer;
     
 }
-.navbar-links li:hover{
+/* .navbar-links li:hover{
 background-color: rgba(90, 93, 93, 0.534);
 border-radius: 10%;
 color: rgb(233, 233, 233);
-}
+} */
 
 
 @media screen and (max-width:650px) {
@@ -141,11 +142,11 @@ color: rgb(233, 233, 233);
         margin: 0 auto;
         font-size:2rem;
     }
-    .navbar-links li:hover{
+    /* .navbar-links li:hover{
        background-color: rgba(90, 93, 93, 0.534); 
 
       border-radius: 10%;
-    }
+    } */
     .navBar.active{
 
         background-color: rgba(0, 0, 0, 0.424);
@@ -386,8 +387,9 @@ border-radius: 90%;
  }
  /*ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss*/
  .cardGithub{
+
      display: flex;
-     justify-content: space-around;   
+     justify-content: center;   
  }
  .githubHolder{
      margin-top: 1rem;
@@ -403,9 +405,9 @@ border-radius: 90%;
      width: 50px;
  }
  @media  screen and (max-width:450px) {
-    .cardGithub{
+    /* .cardGithub{
         justify-content: space-between;
-    }
+    } */
     .carGitHubLogo{
         width: 40px;
     }
@@ -416,9 +418,9 @@ border-radius: 90%;
      margin:0 1rem;
  }
  .language{
-     margin-top: 1rem;
      margin-left: 1rem;
-
+     margin-top: 1rem;
+     text-align: center;
      width: 100%;
      height: 8vh;
      font-size:1.2rem;
@@ -427,6 +429,12 @@ border-radius: 90%;
      justify-content: flex-start;
  }
 
+ @media screen and (max-width:427px){
+    .language{
+        margin-left: 0;
+    }
+ }
+ 
  @media screen and (min-width:1200px){
     .card{
         width: 40%;    
@@ -467,7 +475,7 @@ navbar-links
     color: white;
 }
 .navBarActivate a:hover{
-    background-color: #e6e6e6a9;
+    /* background-color: #e6e6e6a9; */
     color: black;
     border-radius: 10%;
 }
@@ -758,4 +766,8 @@ navbar-links
 box-shadow: 2px 2px 10px rgb(221, 221, 221), -2px -2px 10px rgb(221, 221, 221) ;
 padding:10px 10px;
 
+}
+.languages{
+    font-weight: 200;
+    font-size: 1.5rem;
 }
