--- a/style.css
+++ b/style.css
@@ -27,6 +27,20 @@ body {
   margin-right: 20px;
 }
 
+@media screen and (max-width: 1100px) {
+  .header {
+    background-image: none;
+  }
+  .headerContainer {
+    color: white;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    bottom: 50%;
+  }
+}
+
 .glitch {
   -webkit-animation: glitch-skew 4s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4s infinite;
           animation: glitch-skew 4s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4s infinite;
@@ -363,8 +377,43 @@ body {
 
 .projectContainer {
   width: 80%;
+  padding: 10px;
   margin-top: 2rem;
   margin: auto;
+  border-radius: 20px;
+}
+
+.projectContainer:hover {
+  -webkit-animation: onProjectHover 1s;
+          animation: onProjectHover 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+a {
+  text-decoration: none;
+}
+
+@-webkit-keyframes onProjectHover {
+  0% {
+    background-color: transparent;
+  }
+  50% {
+  }
+  100% {
+    background-color: #707D98;
+  }
+}
+
+@keyframes onProjectHover {
+  0% {
+    background-color: transparent;
+  }
+  50% {
+  }
+  100% {
+    background-color: #707D98;
+  }
 }
 
 .projectCard {
@@ -377,10 +426,100 @@ body {
 }
 
 .projectCard img {
-  width: 100px;
+  width: 200px;
 }
 
 .projectCard .paragraph {
   margin-left: 2rem;
+}
+
+.yellow {
+  color: yellow;
+}
+
+.icon {
+  font-size: 2rem;
+  margin: auto;
+  text-align: center;
+  text-align: left;
+  color: white;
+}
+
+.alignVertical {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.iconHref {
+  margin-left: 5px;
+}
+
+@media screen and (max-width: 1004px) {
+  .cardContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .card {
+    margin-top: 2rem;
+  }
+}
+
+@media screen and (max-width: 884px) {
+  .aboutMeContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .myAbout {
+    width: 80%;
+    text-align: center;
+  }
+  .myPicture {
+    width: 50%;
+    text-align: center;
+  }
+  .projectCard {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    background-color: #707D98;
+    background-color: rgba(112, 125, 152, 0.3);
+    border-radius: 10px;
+  }
+  .contact {
+    text-align: center;
+  }
+  .cardImageContainer {
+    text-align: center;
+  }
+  .cardTextContainer {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .aboutMeContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .myAbout {
+    width: 80%;
+    text-align: center;
+  }
+  .myPicture {
+    width: 100%;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
