--- a/style.css
+++ b/style.css
@@ -1,777 +1,165 @@
-*{
-  padding:0;
-  margin:0;
-  box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-html{
-  scroll-behavior: smooth;
-}
-main{
-  min-height: 100vh;
-  width: 100%;
-  max-width: 100%;
-  background-image: linear-gradient(rgba(122, 123, 124, 0), rgba(0, 0, 0, 0.7)), url("img/background7.JPG");
-  background-position: center center;
-  background-size: cover;
-  background-repeat: none;
-}
-.navBar{
-  display:flex; 
-  min-height: 50px;
-  width: 90%;
-  margin:0 auto;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 5%;
-  transition: all 0.5s;
-}
-.navBar a{
-  text-decoration: none;
-  color: black;
+h1, h2, h3, h4, p {
+  font-family: 'Raleway', sans-serif;
 }
 
-.toggle-button{   
-  cursor: default;
-  display: none;
-  position: absolute;
-  right:0;
-  top: 0;
-  border-radius: 5px;
-  height: 40px;
-  width: 40px;
+h1, h2, h3 {
+  color: #2E3440;
 }
 
-
-
-
-.line{
-  display: none;
-  width: 80%;
-  border-radius: 10px;
-  height: 5px;
-  background-color: white;
-  margin: 3px auto;
-  
-  background-color: black;
+p {
+  color: #4C566A;
 }
 
-
-.navbar-links{
-  display: flex;
-  justify-content: space-between;
-}
-.logo{
-  font-size:2rem;
-  color: black;
-  cursor: pointer;
-}
-/* .mouseHoverInLogo{
-   transform: scale(1.5);
-   transition: 1s;
-} */
-
-.mouseHoverOutLogo{
-  color: rgb(0, 0, 0);
-  transform: scale(1);
-  transition: 1s;
-}
-
-.navbar-links li{
-  list-style: none;
-  display: inline;
-  width: 100%;
-  margin: 0 2rem;
-  font-size:2rem;
-  cursor: pointer;
-  
-}
-/* .navbar-links li:hover{
-background-color: rgba(90, 93, 93, 0.534);
-border-radius: 10%;
-color: rgb(233, 233, 233);
-} */
-
-
-@media screen and (max-width:650px) {
-
-  .toggle-button:hover{
-      background-color: rgba(90, 93, 93, 0.534);
-      border-radius: 10%;
-  }
-     .toggle-button{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      cursor: pointer;
-     
-     }
-   .navbar-links{
-   display: none;
-    width: 100%;
-   }
-   .navBar{
-       flex-direction: column;
-       align-items: flex-start;
-       justify-content: center;
-   }
-   .navbar-links ul{
-       width: 100%;
-       flex-direction: column;
-   }
-   .navbar-links li{
-       width: 100%;
-       display:block;
-       text-align: center;
-       margin-bottom:1rem;
-   }
-   
-  .line{
-      display: block;  
-  }
-  .navbar-links.active{
-      display:flex;
-      color: white;
-  }
-  
-  
-  .navbar-links li{
-      width: 50%;
-      margin: 0 auto;
-      font-size:2rem;
-  }
-  /* .navbar-links li:hover{
-     background-color: rgba(90, 93, 93, 0.534); 
-    border-radius: 10%;
-  } */
-  .navBar.active{
-
-      background-color: rgba(0, 0, 0, 0.424);
-      width: 100%;
-  }
-
-  .navBar{
-      left: 0;
-      width: 100%;
-  }
-} 
-
-.linkAndText{
-  /* background-color: rgba(0, 255, 255, 0.267); */
-  width: 100%;
-  margin: 0 auto;
-  height: 80vh;
-  position:absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-/*Text in main, Hey I am Samet and links for social Media*/
-.textContainer{
-/* background-color: rgb(10, 233, 233); */
-margin-right:10%;
-}
-.welcome{
-  color: white;
-  font-size:1.5rem;
-  width: 100%;
-
-  text-align: center;
-  font-family: 'Dancing Script', cursive;
-}
-
-.links{
-  text-align: center;
-  margin-top:1rem;
-  width: 100%;
-}
-.links a{
-  text-decoration: none;
-}
-.socialMedia{
-  width: 50px;
-  height: 50px;
-}
-
-
-/*for text*/
-@media screen and (min-width:900px) {
-  .welcome{
-      font-size:3rem;
-  }
-  .socialMedia{
-      width: 70px;
-      height: 70px;
-  }
-
-}
-@media screen and (max-width:1030px){
-  main{
-      background-image: linear-gradient(rgba(122, 123, 124, 0), rgba(0, 0, 0, 0.7)), url("img/resizedjpg.jpg");
-  }
-  .welcome{
-      font-size:1.5rem
-  }
-  .socialMedia{
-      width: 50px;
-      height: 50px;
-  }
-  
-
-  
-}
-@media (max-width:720px) {
-
-  .textContainer{
-      margin: 0 auto;
-  }
-  .welcome{
-      font-size:2rem;
-  }
-  .linkAndText{
-      align-items: flex-end;
-      justify-content: flex-end;
-      
-  }
-}
-
-
-
-
-
-.mouseHoverIn{
-  transform:translateY(-10px);
-  transition: 1s ease-out;
-  fill:white;
-}
-.mouseHoverOut{
-  transform:translateY(0px);
-  transition: 1s ease-out;
-  fill:rgb(0, 0, 0);
-}
-.mouseHoverInText{
-  transform:translateY(-10px);
-  transform: scale(1.1);
-  transition: 1s ease-out;
-  color:black;
-}
-
-.mouseHoverOutText{
-  transform:translateY(0px);
-  transform: scale(1);
-  transition: 1s ease-out;
-  color:white;
-}
-
-
-.myInformations{
-  background-color: #E9ECEF;
-  padding-bottom: 5rem;
-}
-.textAndImgContainer{
-  margin: 0 0;
-}
-
-.aboutMe{
-  width: 90%;
-  border-bottom: 1px solid black;
-  text-align: center;
-  margin: 0 auto;
-  padding-top:2rem;
-  font-size:2rem;
-  font-family: 'Nunito', sans-serif;
-}
-
-.aboutMeContainer{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 90%;
-
-  margin: 1rem auto;
-}
-.myText{
-  width: 100%;
-  margin-top: 1rem;
-  text-align: center;
-
-  font-size:1.5rem;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-.myImage{
-  width: 20%;
-  min-width: 270px;
-  border-radius: 44px;
-}
-
-@media (min-width:800px) {
-  .aboutMeContainer{
-      flex-direction: row;
-      justify-content: space-evenly;
-  
-  }
-  .myImage{
-      width: 25%;
-  }
-  .myText{
-      width: 30%;
-  
-   
-  }
-  .textAndImgContainer{
-      margin: 0 1rem;
-  }
-  
-}
-
-.projects{
-  width: 100%;
-  padding-bottom: 10rem;
-  background-color: #F8F9FA;
-}
-.projectsInfo{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
-  font-size:3rem;
-  color: rgb(68, 68, 68);
-
-}
-.container{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center; 
-  flex-wrap: wrap;
-}
-.card{
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), -3px -3px 5px rgba(0, 0, 0, 0.2);
-  width: 90%;
-  border-radius: 20px;;
-  min-height: 300px;
+main {
   margin-top: 5rem;
-  background-color: #FFFFFF;
-  
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.imgContainer{
+
+.width {
+  width: 90%;
+  max-width: 1300px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.myPic {
+  width: 40%;
+}
+
+.myPic img {
   width: 100%;
-  text-align: center;
-}
-.projectImage{
-width: 10vw;
-height: 20%;
-min-width: 100px;
-min-height: 50px;
-border-radius: 90%;
 }
 
-.movie{
-  max-height: 100px;
-  max-width: 100px;
+.infoContainer {
+  width: 50%;
 }
 
-.cardImgAndInfo h2{
-text-align: center;
-font-size:2rem;
+.infoContainer h1 {
+  font-size: 4rem;
+  font-weight: bold;
 }
 
-.cardImgAndInfo h4{
-  text-align: center;
-  font-size:1.2rem;
-}
-/*ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss*/
-.cardGithub{
-
-   display: flex;
-   justify-content: center;   
-}
-.githubHolder{
-   margin-top: 1rem;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), -1px -1px 5px rgba(0, 0, 0, 0.2);
-   border-radius: 10px;
-  
+.infoContainer p {
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
 }
 
-.carGitHubLogo{
-   width: 50px;
-}
-@media  screen and (max-width:450px) {
-  /* .cardGithub{
-      justify-content: space-between;
-  } */
-  .carGitHubLogo{
-      width: 40px;
-  }
-  
-  
-}
-.clone{
-   margin:0 1rem;
-}
-.language{
-   margin-left: 1rem;
-   margin-top: 1rem;
-   text-align: center;
-   width: 100%;
-   height: 8vh;
-   font-size:1.2rem;
-   display: flex;
-   align-items: center;
-   justify-content: flex-start;
+.infoContainer .contactInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-@media screen and (max-width:427px){
-  .language{
-      margin-left: 0;
-  }
-}
-
-@media screen and (min-width:1200px){
-  .card{
-      width: 40%;    
-  }
-  .container{
-      flex-direction: row;
-      justify-content: space-around;
-  }
-
-}
-
-
-/*card links*/
-.cardLinks{
-  text-decoration: none;
-  color: black;
-}
-
-navbar-links
-.fix{
-  border-radius: 10px;
-}
-.rotate{
-  transform: rotateX(180deg);
-  transition: 1s;
-  background-color: aqua;
-}
-.navBarActivate{
-  width: 100%;
-  left: 0;
-  background: rgba(65, 65, 65, 0.8);
-  transition: all 0.5s;
-  color: white;
-  z-index: 2;
-}
-
-.navBarActivate a{
-  color: white;
-}
-.navBarActivate a:hover{
-  /* background-color: #e6e6e6a9; */
-  color: black;
-  border-radius: 10%;
-}
-.navBarActivate .line{
-  background-color: white;
-}
-.fix{
-  margin-top:1rem;
-  border-radius: 10px;
-}
-.card2 a{
-  text-decoration: none;
-  color: black;
-}
-.card2{
+.infoContainer .contactInfo i {
   cursor: pointer;
-}
-.container a{
-  text-decoration: none;
-  color: black;
-}
-
-.navBarActivate .logoLink{
-  margin:0 2rem;
- 
-}
-.navBarActivate .navbar-links a{
-  margin:0 2rem;
-}
-@media (max-width:830px) {
-  .navBarActivate .logoLink{
-      margin:0 1rem;
-     
-  }
-  .navBarActivate .navbar-links a{
-      margin:0 0;
-  }
-}
-@media (max-width:650px) {
-  .logoLink{
-      margin:0 1rem;
-      color: rgb(255, 0, 0);
-  }
-  .toggle-button{
-      margin: 0 1rem;
-  }
-
+  color: #2E3440;
+  margin-top: 1rem;
+  font-size: 2rem;
+  margin-right: 0.5rem;
 }
 
-
-.animate{
-  /* transform: translateY(-100px);
-  transition: 2s; */
-  /* animation: moveUp 2s forwards */
-}
-
-@keyframes moveUp {
-  0%{
-
-      opacity: 0;
-  }
-  50%{
-      transform: translateY(-100px);
-      opacity: 1;
-  }
-  
-}
-
-
-.getInTouch{
+.line {
   width: 100%;
-  background-color: #E9ECEF;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding:1rem;
-
-}
-.getInTouchInner{
-  text-align: center;
-  width: 100%;
-  
+  height: 2px;
+  background-color: #2E3440;
+  margin-top: 3rem;
 }
 
-.getInTouchInner h1, .getInTouchInner p{
-  margin: 2rem 0;
-}
-.getInTouchInner h1{
+.header {
   font-size: 2.5rem;
-  font-family: 'Montserrat', sans-serif;
-}
-.getInTouchInner a {
-  text-decoration: none;
-}
-.getInTouchInner a:hover{
-  text-decoration: none;
-  color: rgba(255, 0, 0, 0.692);
-}
-.getInTouchInner p{
-  font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  margin-top: 1rem;
 }
 
-@media (min-width:600px){
-  .getInTouchInner{
-
-      width: 60%;
-  }
-  .getInTouch{
-      padding:4rem 0 ;
-  
-  }
-  
-.getInTouchInner h1{
-  font-size: 3rem;
-}
-.getInTouchInner p{
-  font-size: 1.5rem;
+.paragraph {
+  font-size: 1.3rem;
+  margin-top: 1rem;
 }
 
-
+.align {
+  text-align: center;
 }
-.slide{
+
+.card {
+  padding: 10px;
+  width: 32%;
+  margin-right: 1rem;
+  margin-top: 1rem;
+}
+
+.card:hover {
+  background-color: red;
+}
+
+.projectContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 2rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cardImageContainer {
   width: 100%;
- 
- margin: 5rem 0;
- padding:0 1rem ;
- max-height: 1000px;
- /* background-color: aqua; */
-}
-@media screen and (max-width:500px) {
-  .slide{
-      margin: 5rem 0rem;
-      max-height: 1000px;
-      padding: 0;
-      /* background-color: aqua; */
-   }
 }
 
-
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-max-width: 1000px;
-position: relative;
-margin: auto;
-
+.cardImageContainer img {
+  width: 100%;
 }
 
-/* Hide the images by default */
-.mySlides {
-display: none;
-/* background-color: rgb(255, 0, 0);  */
-
-display: flex;
-justify-content: center;
-align-items: center; 
-
+.cardHeader {
+  font-size: 2rem;
+  margin-top: 0.3rem;
+  font-weight: 500;
 }
 
-.slide-img{
-  display: block;
-  margin: auto;
-  width: 300px;
-  height: 400px;
-  max-width: 300px;
-  max-height: 400px;
+.tech {
+  margin-top: 2rem;
 }
 
-
-/* Next & previous buttons */
-.prev, .next {
-cursor: pointer;
-position: absolute;
-top: 50%;
-width: auto;
-margin-top: -22px;
-padding: 16px;
-color: white;
-font-weight: bold;
-transition: 0.6s ease;
-border-radius: 0 3px 3px 0;
-user-select: none;
-background-color: rgba(0,0,0,0.8);
+.techContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 1rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-/* @media screen and (max-width:500px) {
-  .prev, .next{
-      padding: 12px;
-      top: 100%;
-      margin-top: 0px;
-  }
-} */
-
-@media screen and (max-width:300px) {
-.slide{
-    display: none;
-}
+.techCard {
+  margin-right: 10px;
+  text-align: center;
+  padding: 0 20px;
+  width: 10%;
 }
 
-
-/* Position the "next button" to the right */
-.next {
-right: 0;
-border-radius: 3px 0 0 3px;
+.techCard img {
+  width: 100%;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.techHeader {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 0.2rem;
 }
 
-/* Caption text */
-
-/* Number text (1/3 etc) */
-.numbertext {
-color: #f2f2f2;
-font-size: 12px;
-padding: 8px 12px;
-position: absolute;
-top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-cursor: pointer;
-height: 15px;
-width: 15px;
-margin: 0 2px;
-background-color: #bbb;
-border-radius: 50%;
-display: inline-block;
-transition: background-color 0.6s ease;
-}
-
-
-
-/* Fading animation */
-.fade {
--webkit-animation-name: fade;
--webkit-animation-duration: 1.5s;
-animation-name: fade;
-animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-from {opacity: .4}
-to {opacity: 1}
-}
-
-@keyframes fade {
-from {opacity: .4}
-to {opacity: 1}
-}
-
-.techContainer{
+.contact {
   margin-top: 3rem;
 }
-.techText{
-  font-family: 'Hind Siliguri', sans-serif;
-  width: 100%;
-  display: flex;
-  padding:20px;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
-  color: rgba(30, 30, 30, 0.822);
-}
-.frontback{
-  margin: 0 auto;
-  width: 70%;
-  margin-top: 3rem;
-  display: flex;
-  justify-content: space-around;
-
-  
-}
-.frontImage,.backImage{
-  width: 100px;
-}
-
-.frontEnd,.backEnd{
-
-/* offset-x | offset-y | blur-radius | color */ 
-box-shadow: 2px 2px 10px rgb(221, 221, 221), -2px -2px 10px rgb(221, 221, 221) ;
-padding:10px 10px;
-
-}
-.languages{
-  font-weight: 200;
-  font-size: 1.5rem;
-}
-.findworkbuddy{
-  max-width: none;
-  width: 170px;
-  height: 70px;
-}
+/*# sourceMappingURL=style.css.map */
