--- a/style.scss
+++ b/style.scss
@@ -1,389 +1,123 @@
-$headerColor:#707D98;
-$headerSize: 3rem;
-$backgroundColor: black;
-$font: ticker;
-$paragraphSize: 1.5rem;
-
-@font-face{
-    font-family: 'ticker';
-    src: url('ticker.woff');
-}
-
-body{
+*{
     padding:0;
     margin:0;
-    background-color: $backgroundColor;
-    overflow-x: hidden;
+    box-sizing: border-box;
+}
+h1,h2,h3,h4,p{
+    font-family: 'Raleway', sans-serif;
+}
+h1,h2,h3{
+    color:#2E3440;
+}
+p{
+    color:#4C566A
 }
 
-.header{
-    width: 100vw;
-    height: 100vh;
-    background-image: url("elliotBackground.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
-
-.headerContainer{
-    color:white;
-    position:absolute;
-    left:65%;
-    bottom: 75%;
-    margin-right: 20px;
-}
-
-@media screen and (max-width:1100px) {
-    .header{
-
-        background-image: none;
-      
-    
-    }
-    .headerContainer{
-        color:white;
-        position:absolute;
-        left: 50%;
-        transform: translate(-50%, 0);
-        bottom:50%;
-    }
-    
-}
-
-.glitch {
-    animation: glitch-skew 4s cubic-bezier(.25, .46, .45, .94) 4s infinite;
-    font-family: orbitron, sans-serif;
-    font-size: 3rem;
-    font-weight: 900;
-    line-height: 0.5;
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    transform-origin: center top;
-
-    &__main {
-        color: #FFF;
-    }
-
-    &__color {
-        height: 100%;
-        left: 0;
-        opacity: 0.8;
-        position: absolute;
-        top: 0;
-        transform-origin: center center;
-        width: 100%;
-        z-index: -1;
-
-        &--red {
-            animation: glitch 300ms cubic-bezier(.25, .46, .45, .94) infinite;
-            color: red;
-        }
-
-        &--blue {
-            animation: glitch 300ms cubic-bezier(.25, .46, .45, .94) infinite reverse;
-            color: blue;
-        }
-
-        &--green {
-            animation: glitch 300ms cubic-bezier(.25, .46, .45, .94) 100ms infinite;
-            color: #00FF0B;
-        }
-    }
-
-    &__line {
-        animation: glitch-line 2s linear infinite;
-        background: #000;
-        content: '';
-        height: 1px;
-        left: 0;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 1;
-
-        &--first {
-            animation: glitch-line 2s linear infinite;
-        }
-
-        &--second {
-            animation: glitch-line 1s linear 1s infinite;
-        }
-    }
-}
-
-@keyframes glitch {
-    0% {
-        transform: translate(0);
-    }
-    20% {
-        transform: translate(-8px, 8px);
-    }
-    40% {
-        transform: translate(-8px, -8px);
-    }
-    60% {
-        transform: translate(8px, 8px);
-    }
-    80% {
-        transform: translate(8px, -8px);
-    }
-    100% {
-        transform: translate(0);
-    }
-
-}
-
-@keyframes glitch-skew {
-    0% {
-        transform: skew(0deg, 0deg);
-    }
-    48% {
-        transform: skew(0deg, 0deg);
-        filter: blur(0);
-    }
-    50% {
-        transform: skew(-20deg, 0deg);
-        filter: blur(4px);
-    }
-    52% {
-        transform: skew(20deg, 0deg);
-    }
-    54% {
-        transform: skew(0deg, 0deg);
-        filter: blur(0);
-    }
-    100% {
-        transform: skew(0deg, 0deg);
-    }
-
-}
-
-@keyframes glitch-line {
-    0% {
-        top: 0;
-    }
-
-    100% {
-        top: 100%;
-    }
-
-}
-
-.absoluteee{
-    position: absolute;
-}
-.aboutMe{
-    position: relative;
+main{
     margin-top: 5rem;
-    width: 100%;
-    margin-bottom: 10rem;
- 
-    h1{
-        color:$headerColor;
-        font-size: $headerSize;
-        font-family: $font;
-        text-align: center;
-    }
-}
-.line{
-    width: 80%;
-    height: 2px;
-    background-color: $headerColor;
-    margin: auto;
-}
-.mainContainer{
-    width: 100%;
-    min-height: 250vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.91), rgba(0, 0, 0, 1)), url("bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-attachment: fixed;
-
-}
-
-
-.aboutMeContainer{
-    margin-top: 2rem;
     display: flex;
-    color:white;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
-.myPicture{
+.width{
+    width: 90%;
+    max-width: 1300px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.myPic{
     width: 40%;
     img{
-        width: 80%;
-        max-height: 600px;
-        object-fit: cover;
+        width: 100%;
     }
 }
 
-.myAbout{
-    width: 40%;
+.infoContainer{
+    width: 50%;
+    h1{
+        font-size: 4rem;
+        font-weight: bold;
+    }
+    p{
+        margin-top: 0.5rem;
+        font-size: 1.5rem;
+    }
+    .contactInfo{
+        display: flex;
+        i{
+            cursor: pointer;
+            color:#2E3440;
+            margin-top: 1rem;
+            font-size: 2rem;
+            margin-right: 0.5rem;
+        }
+    }
+}
+
+.line{
+    width: 100%;
+    height: 2px;
+    background-color: #2E3440;
+    margin-top: 3rem;
+}
+.header{
+    font-size: 2.5rem;
+    margin-top: 1rem;   
 }
 .paragraph{
-    font-size: $paragraphSize;
-    color:white;
-    font-family: $font;
+    font-size: 1.3rem;
+    margin-top: 1rem;   
 }
-.center{
+.align{
     text-align: center;
 }
-.width80{
-    width: 80%;
-    margin:auto
-}
-.cardContainer{
-    width: 80%;
-    margin: auto;
-    margin-top: 2rem;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-   
-   
-}
-
 .card{
+    padding:10px;
+    width: 32%;
+    margin-right:1rem;
     margin-top: 1rem;
-    width: 400px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    
-    
-}
-.card img{
-    width: 100px;
-    height: 100px;
-}
-.cardTextContainer{
-    margin-left: 1rem;
-    color:white;
-    font-family: $font;
-    font-size: $paragraphSize;
-} 
-.mt-2{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    &:hover{
+        background-color: red;
+    }
 }
 .projectContainer{
-    width: 80%;
-    padding:10px;
+    display: flex;
     margin-top: 2rem;
-    margin: auto;
-    border-radius: 20px;
-
-    &:hover{
-        animation: onProjectHover 1s;
-        animation-fill-mode: forwards; 
-        
-        
-    }
+    flex-wrap: wrap;
 }
-a{
-    text-decoration: none;
-}
-@keyframes onProjectHover {
-    0%{
-        background-color: transparent;
-    }
-    50%{
-
-    }
-    100%{
-        background-color: $headerColor;
-    }
-}
-
-.projectCard{
-    display: flex;
-    align-items: center;
+.cardImageContainer{
+    width: 100%;
     img{
-        width: 200px;
-    }
-    .paragraph{
-        margin-left: 2rem;
-    }
-}
-.yellow{
-    color:yellow;
-}
-
-.icon{
-    font-size: 2rem;
-    margin: auto;
-    text-align: center;
-    text-align: left;
-    color:white;
-}
-.alignVertical{
-    display: flex;
-    align-items: center;
-}
-.iconHref{
-    margin-left: 5px;    
-}
-@media screen and (max-width:1004px) {
-    .cardContainer{
-        flex-direction: column;
-
-    }    
-    .card{
-        margin-top: 2rem;
-        
-    }
-}
-
-@media screen and (max-width:884px) {
-    .aboutMeContainer{
-        flex-direction: column;
-    }
-    .myAbout{
-        width: 80%;
-        text-align: center;
-    }
-    .myPicture{
-        width: 50%;
-        text-align: center;
-    }
-    .projectCard{
-        flex-direction: column;
-        text-align: center;
-
-        background-color: $headerColor;
-        background-color: rgba(112, 0125, 152, 0.3);
-        border-radius: 10px;
-    }
-    .contact{
-        text-align: center;
-    }
-    .cardImageContainer{
-        text-align: center;
-    }
-    .cardTextContainer{
-        text-align: center;
-    }
-
-}
-@media screen and (max-width:400px) {
-    .aboutMeContainer{
-        flex-direction: column;
-    }
-    .myAbout{
-        width: 80%;
-        text-align: center;
-    }
-    .myPicture{
         width: 100%;
-        text-align: center;
     }
-    $headerSize:0.8rem;
-
+}
+.cardHeader{
+    font-size: 2rem;
+    margin-top: 0.3rem;
+    font-weight: 500;
+}
+.tech{
+    margin-top: 2rem;
+}
+.techContainer{
+    display: flex;
+    margin-top: 1rem;
+    justify-content: center;
+}
+.techCard{
+    margin-right: 10px;
+    text-align: center;
+    padding:  0 20px;
+    width: 10%;
+    img{
+        width: 100%;
+    }
+}
+.techHeader{
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 0.2rem;
+}
+.contact{
+    margin-top: 3rem;
 }
