--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+
 *{
     padding:0;
     margin:0;
@@ -234,9 +235,12 @@ main{
             object-fit: cover
         }
     }
+    .containre{
+        width: 50%;
+    }
     .card{
         padding:10px;
-        width: 50%;
+        width: 100%;
         padding:20px;
         margin-top: 2rem;
         &:hover{
