--- a/style.css
+++ b/style.css
@@ -347,6 +347,9 @@ main {
   .projectContainer img {
     width: 100%;
   }
+  .containre {
+    width: 90%;
+  }
   .card {
     padding: 10px;
     width: 90%;
